--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
+<!-- tag::all[] -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
@@ -29,3 +30,4 @@
     </form>
   </body>
 </html>
+<!-- end::all[] -->
